--- a/app/src/main/res/layout/main_drawer_select_set_item.xml
+++ b/app/src/main/res/layout/main_drawer_select_set_item.xml
@@ -7,33 +7,43 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="42dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/round_retengle_folder"
+        android:orientation="horizontal"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp">
 
         <ImageView
             android:id="@+id/iv_main_drawer_select_folder"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            app:srcCompat="@drawable/ic_outline_home_24" />
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="1dp"
+
+            android:background="@drawable/drawer_folder" />
 
         <TextView
             android:id="@+id/iv_main_drawer_select_title"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_weight="0"
-            android:text="TextView"
+            android:text="          메인"
             android:textColor="#DE000000"
-            tools:layout_weight="1" />
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/iv_main_drawer_select_count"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center|center_horizontal"
-            android:layout_weight="0"
-            android:text="TextView"
-            android:textColor="#DE000000" />
+            android:layout_marginRight="10dp"
+            android:text="0"
+            android:textAlignment="textEnd"
+            android:textColor="#DE000000"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
