--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -99,10 +99,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/guideline11"
+        app:layout_constraintBottom_toTopOf="@+id/tv_reset_password_ok"
         app:layout_constraintEnd_toStartOf="@+id/vertical_guide_right"
         app:layout_constraintStart_toStartOf="@+id/vertical_guide_left"
-        app:layout_constraintTop_toTopOf="@+id/guideline8">
+        app:layout_constraintTop_toTopOf="@+id/guideline8"
+        app:layout_constraintVertical_bias="0.0">
 
         <EditText
             android:id="@+id/edt_login_activity_email"
