--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -178,7 +178,7 @@
                 >
 
                 <ImageView
-                    android:id="@+id/btn_main_sel_func"
+                    android:id="@+id/btn_main_sel_folder"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
