--- a/app/src/main/res/layout/dialog_drawer_edit_folder.xml
+++ b/app/src/main/res/layout/dialog_drawer_edit_folder.xml
@@ -6,12 +6,13 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingTop="10dp"
-    android:paddingBottom="10dp"
-    >
+    android:paddingBottom="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_weight="0"
         android:orientation="vertical">
 
@@ -19,25 +20,21 @@
             android:id="@+id/edt_main_activity_drawer_folder_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
             android:layout_marginBottom="5dp"
             android:layout_weight="0"
-            android:backgroundTint="#26000000"
+            android:backgroundTint="#9FD2FF"
             android:ems="10"
             android:hint="폴더 이름"
             android:maxLength="10"
             android:maxLines="1"
-            android:textColor="#262626"
-            android:textColorHint="#26000000" />
+            android:textColor="#9FD2FF"
+            android:textColorHint="#CCE7FF" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="40dp"
             android:layout_marginTop="5dp"
-            android:layout_marginRight="40dp"
             android:layout_weight="0"
             android:gravity="center"
             android:orientation="horizontal">
@@ -63,6 +60,7 @@
                 android:textStyle="bold" />
 
             <LinearLayout
+                android:id="@+id/v_drawer_dialog_margin_center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -84,6 +82,7 @@
                 android:textStyle="bold" />
 
             <LinearLayout
+                android:id="@+id/v_drawer_dialog_margin_right"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
