--- a/app/src/main/res/layout/main_drawer_custom.xml
+++ b/app/src/main/res/layout/main_drawer_custom.xml
@@ -27,7 +27,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="60dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -82,8 +82,8 @@
                     android:id="@+id/lin_main_drawer_main_folder"
                     android:layout_width="match_parent"
                     android:layout_height="42dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:background="@drawable/round_retengle"
                     android:orientation="horizontal"
                     android:paddingTop="10dp"
@@ -94,6 +94,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="10dp"
+                        android:layout_marginRight="50dp"
                         android:layout_marginBottom="2dp"
                         android:background="@drawable/drawer_main" />
 
@@ -102,7 +103,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:text="          전체"
+                        android:text="전체"
                         android:textColor="#DE000000"
                         android:textSize="16sp"
                         android:textStyle="bold" />
@@ -124,8 +125,8 @@
                     android:id="@+id/lin_main_drawer_impo_folder"
                     android:layout_width="match_parent"
                     android:layout_height="42dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:background="@drawable/round_retengle_impo"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp">
@@ -135,6 +136,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="10dp"
+                        android:layout_marginRight="50dp"
                         android:background="@drawable/drawer_impo" />
 
                     <TextView
@@ -142,7 +144,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:text="          중요"
+                        android:text="중요"
                         android:textColor="#DE000000"
                         android:textSize="16sp"
                         android:textStyle="bold" />
@@ -164,8 +166,8 @@
                     android:id="@+id/lin_main_drawer_trash_folder"
                     android:layout_width="match_parent"
                     android:layout_height="42dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:background="@drawable/round_retengle_trash"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp">
@@ -176,6 +178,7 @@
                         android:layout_height="match_parent"
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="10dp"
+                        android:layout_marginRight="50dp"
                         android:background="@drawable/drawer_trash" />
 
                     <TextView
@@ -183,7 +186,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:text="          휴지통"
+                        android:text="휴지통"
                         android:textColor="#DE000000"
                         android:textSize="16sp"
                         android:textStyle="bold" />
@@ -222,7 +225,8 @@
                     android:id="@+id/lv_main_activity_drawer_list_item"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:divider="@null" />
 
                 <ImageView
                     android:id="@+id/iv_main_drawer_add_folder"
